<resources>
    <string name="app_name">CitekTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="select_user">Select User</string>
    <string name="login">Login</string>
    <string name="request_error">An error occurred while sending request</string>
    <string name="error_occurred">An error occurred. Please, try again</string>
    <string name="loading_error">Loading error</string>
    <string name="retry">Retry</string>
    <string name="no_users_found">No users found</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_one_user_selected">No one user selected</string>
    <string name="empty_password">Empty password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="continue_work">Continue Work:</string>
    <string name="response">Response:</string>
    <string name="photo_hash">Photo Hash:</string>
    <string name="current_date">Current Date:</string>
</resources>