<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="24dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="12dp"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:maxLines="2"
        android:ellipsize="middle"
        android:paddingVertical="12dp"
        tools:text="@string/select_user"/>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:enabled="false"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/error_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:enabled="false"
            android:text="@string/error_occurred"/>

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"/>
    </LinearLayout>


</LinearLayout>
