<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:text="@string/response"
            />
        <TextView
            android:id="@+id/response_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:text="@string/continue_work"
            />
        <TextView
            android:id="@+id/continue_work_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:text="@string/photo_hash"
            />
        <TextView
            android:id="@+id/photo_hash_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:text="@string/current_date"
            />
        <TextView
            android:id="@+id/current_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            />
    </LinearLayout>

</LinearLayout>